--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="Это образовательный проект от студентов студентам, призванный распространить любовь к современным технологиям и IT-разработке, передать опыт, знания и просто с пользой провести время!">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Школа разработки IT-проектов</title>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but Школа разработки IT-проектов doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
