Removing hashing of filenames Adding og.logo to website

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="Образовательный проект от студентов студентам, призванный распространить любовь к современным технологиям и IT-разработке, передать опыт, знания и просто с пользой провести время!">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+
+    <meta property="og:title" content="Bonch.dev">
+    <meta property="og:site_name" content="Школа разработки IT-проектов">
+    <meta property="og:url" content="https://bonch.dev">
+    <meta property="og:description" content="Образовательный проект от студентов студентам, призванный распространить любовь к современным технологиям и IT-разработке, передать опыт, знания и просто с пользой провести время!">
+    <meta property="og:image" content="/img/og.image.logo.png">
     <title>Школа разработки IT-проектов</title>
   </head>
   <body>
