--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="Образовательный проект от студентов студентам, призванный распространить любовь к современным технологиям и IT-разработке, передать опыт, знания и просто с пользой провести время!">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
 
-    <meta property="og:title" content="Bonch.dev">
-    <meta property="og:site_name" content="Школа разработки IT-проектов">
+    <meta property="og:title" content="Школа разработки IT-проектов">
     <meta property="og:url" content="https://bonch.dev">
     <meta property="og:description" content="Образовательный проект от студентов студентам, призванный распространить любовь к современным технологиям и IT-разработке, передать опыт, знания и просто с пользой провести время!">
-    <meta property="og:image" content="/img/og.image.logo.png">
+    <meta property="og:image" content="https://bonch.dev/img/og.image.logo.png">
     <title>Школа разработки IT-проектов</title>
   </head>
   <body>
