--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,31 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="Образовательный проект от студентов студентам, призванный распространить любовь к современным технологиям и IT-разработке, передать опыт, знания и просто с пользой провести время!">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="mask-icon" href="favicon.svg" color="white">
+    <link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 
     <meta property="og:title" content="Школа разработки IT-проектов">
     <meta property="og:url" content="https://bonch.dev">
     <meta property="og:description" content="Образовательный проект от студентов студентам, призванный распространить любовь к современным технологиям и IT-разработке, передать опыт, знания и просто с пользой провести время!">
     <meta property="og:image" content="https://bonch.dev/img/og.image.logo.png">
+    <meta property="og:video:width" content="461"/>
+    <meta property="og:video:height" content="196"/>
     <title>Школа разработки IT-проектов</title>
   </head>
   <body>
